--- a/package.json
+++ b/package.json
@@ -36,12 +36,12 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.3.1",
     "eslint-plugin-react": "^7.23.2",
-    "morgan": "^1.10.0",
     "nodemon": "^2.0.7"
   },
   "dependencies": {
     "@babel/runtime": "^7.13.17",
     "cors": "^2.8.5",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "morgan": "^1.10.0"
   }
 }
