--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@babel/runtime": "^7.13.17",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "mongoose": "^5.12.7",
     "morgan": "^1.10.0"
   }
 }
